# Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  single_test.sh
.github/workflows/: ci.yml
IR/include/: IR_generator.h
IR/src/: IR_generator.cpp
RCompiler-Testcases/IR-1/src/comprehensive1/: comprehensive1.ll
RCompiler-Testcases/IR-1/src/comprehensive2/: comprehensive2.ll
RCompiler-Testcases/IR-1/src/comprehensive3/: comprehensive3.ll
RCompiler-Testcases/IR-1/src/comprehensive4/: comprehensive4.ll
RCompiler-Testcases/working_space/: debugging.out
builtin/: builtin.ll
front_end_entry/include/: check_and_generate_IR.h
front_end_entry/src/: check_and_generate_IR.cpp
lexer/: lexer_test.cpp
lexer/include/: regex_matcher.h  token.h  tokenizer.h
lexer/src/: regex_matcher.cpp  token.cpp  tokenizer.cpp
parser/: parser_test.cpp
parser/include/: builder.h  classes.h  constant_items.h  enumerations.h  expression.h  function_parameters.h  functions.h  generic_params.h  implementation.h  item.h  leaf_node.h  module.h  node.h  path.h  pattern.h  statements.h  structs.h  trait.h  type.h
parser/src/: builder.cpp  enumerations.cpp  expression.cpp  function_parameters.cpp  functions.cpp  item.cpp  leaf_node.cpp  module.cpp  node.cpp  path.cpp  pattern.cpp  statements.cpp  structs.cpp  trait.cpp  type.cpp
semantic/include/: scope.h  value_type.h  visitor_frame.h  visitor_manager.h
semantic/src/: scope.cpp  value_type.cpp  visitor_manager.cpp
test/: IR_generator_for_OJ.cpp  IR_test.cpp  semantic_test.cpp  test.cpp
(+34 files in other folders)
